--- a/pages/index.css
+++ b/pages/index.css
@@ -136,9 +136,7 @@
   line-height: 52px;
   color: #ffffff;
   max-width: 580px;
-  margin-top: 100px;
-  margin-left: 80px;
-  margin-bottom: 24px;
+  margin: 100px 0 0 80px;
 }
 
 .recipes__subtitle {
@@ -149,16 +147,13 @@
   line-height: 30px;
   color: #ffffff;
   max-width: 438px;
-  margin-left: 80px;
+  margin: 24px 0 80px 80px;
 }
 
 .recipes__videos {
   display: flex;
   gap: 40px;
-  margin-bottom: 215px;
-  margin-top: 80px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto 215px;
 }
 
 .recipes__iframe {
@@ -175,5 +170,102 @@
   font-size: 20px;
   line-height: 30px;
   color: #ffffff;
-  margin-top: 24px;
+  margin: 24px 0 0;
+}
+
+.reservation {
+  background-color: #d9e7ff;
+  background-image: url(../images/background_reservation.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 100px 0 120px;
+}
+
+.reservation__title {
+  margin: 0 0 80px;
+  text-align: center;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.reservation__form {
+  margin: 0 auto;
+}
+
+.form__fieldset {
+  max-width: 385px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 0;
+  border: none;
+}
+
+.form__label {
+  margin-bottom: 8px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__input {
+  border-radius: 4px;
+  margin-bottom: 32px;
+  height: 60px;
+  width: 100%;
+  box-sizing: border-box;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  border: 1px solid #838383;
+  padding: 20px 20px;
+}
+
+.form__button {
+  background-color: #2f80ed;
+  border: none;
+  border-radius: 4px;
+  margin-bottom: 32px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  height: 60px;
+  width: 100%;
+  box-sizing: border-box;
+  transition: opacity 0.3s ease;
+}
+
+.form__button:hover {
+  opacity: 0.7;
+}
+
+.form__label_type_checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  margin: 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+  height: 20px;
+  width: 20px;
+  margin: 0;
 }
