--- a/pages/index.css
+++ b/pages/index.css
@@ -1,271 +1,11 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000000;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  background-color: #ffffff;
-  background-image: url(../images/background_header.svg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  /* block height */
-  min-height: 720px;
-  max-height: 800px;
-  /* set regular screen height to 100% of viewport to fit above specified screen sizes by default*/
-  height: 100vh;
-  position: relative;
-  box-sizing: border-box;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  width: 105px;
-  height: 39px;
-  margin-top: 30px;
-  margin-left: 30px;
-}
-
-.nav__links {
-  list-style-type: none;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 20px;
-  margin-top: 30px;
-  margin-right: 80px;
-}
-
-.nav__link {
-  text-decoration: none;
-  color: #000000;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.span-accent {
-  display: block;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  font-size: 60px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__title {
-  margin-left: 80px;
-  max-width: 729px;
-  margin-top: 183px;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-  z-index: 2;
-}
-
-.header__description {
-  margin-left: 80px;
-  margin-top: 28px;
-  max-width: 638px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  width: 646px;
-  height: 568px;
-  position: absolute;
-  top: 124px;
-  right: 5px;
-  z-index: 1;
-}
-
-.header__footer {
-  margin-top: auto;
-  /*to ensure footer stays at bottom of page (within parent flex container*/
-  margin-bottom: 40px;
-  margin-left: 80px;
-  margin-right: 80px;
-}
-
-.header__paragraph {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-  margin: 0;
-}
-
-.header__paragraph:last-of-type {
-  position: absolute;
-  right: 80px;
-  bottom: 40px;
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-}
-
-.recipes__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  color: #ffffff;
-  max-width: 580px;
-  margin: 100px 0 0 80px;
-}
-
-.recipes__subtitle {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #ffffff;
-  max-width: 438px;
-  margin: 24px 0 80px 80px;
-}
-
-.recipes__videos {
-  display: flex;
-  gap: 40px;
-  margin: 0 auto 215px;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  color: #ffffff;
-  margin: 24px 0 0;
-}
-
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding: 100px 0 120px;
-}
-
-.reservation__title {
-  margin: 0 0 80px;
-  text-align: center;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form__fieldset {
-  max-width: 385px;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  padding: 0;
-  border: none;
-}
-
-.form__label {
-  margin-bottom: 8px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__input {
-  border-radius: 4px;
-  margin-bottom: 32px;
-  height: 60px;
-  width: 100%;
-  box-sizing: border-box;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  border: 1px solid #838383;
-  padding: 20px 20px;
-}
-
-.form__button {
-  background-color: #2f80ed;
-  border: none;
-  border-radius: 4px;
-  margin-bottom: 32px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #ffffff;
-  height: 60px;
-  width: 100%;
-  box-sizing: border-box;
-  transition: opacity 0.3s ease;
-}
-
-.form__button:hover {
-  opacity: 0.7;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 12px;
-  margin: 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  height: 20px;
-  width: 20px;
-  margin: 0;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/card.css);
+@import url(../blocks/about.css);
+@import url(../blocks/footer.css);
