--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,54 +1,59 @@
 .footer {
-    background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-    color: #ffffff;
-    padding: 60px 80px;
+  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
+  color: #ffffff;
+  padding: 60px 80px;
 }
 
 .footer__content {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer__logo {
-    width: 105px;
-    height: 39px;
-    margin: 0;
+  width: 105px;
+  height: 39px;
+  margin: 0;
 }
 
 .footer__social {
-    margin: 0;
+  margin: 0;
 }
 
 .footer__social-heading {
-    margin: 0 0 20px 0;
+  margin: 0 0 20px 0;
 }
 
 .footer__list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .footer__list-item {
-    display: block;
-    margin: 0;
+  display: block;
+  margin: 0;
 }
 
 .footer__list-item:first-of-type {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .footer__social-icon {
-    width: 16px;
-    height: 16px;
-    margin: 0 10px 0 0;
+  width: 16px;
+  height: 16px;
+  margin: 0 10px 0 0;
 }
 
 .footer__social-link {
-    color: #ffffff;
-    text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
+  transition: color 2s linear;
+}
+
+.footer__social-link:hover {
+  color: #c1c1c1;
 }
 
 .footer__copyright {
-    margin: 108px 0 0;
+  margin: 108px 0 0;
 }
