--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -6,8 +6,7 @@
 .nav__logo {
   width: 105px;
   height: 39px;
-  margin-top: 30px;
-  margin-left: 30px;
+  margin: 30px 0 0 30px;
 }
 
 .nav__links {
@@ -16,8 +15,8 @@
   align-items: center;
   justify-content: space-between;
   gap: 20px;
-  margin-top: 30px;
-  margin-right: 80px;
+  margin: 30px 80px 0 0;
+  padding: 0;
 }
 
 .nav__link {
@@ -27,4 +26,9 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
+  transition: color 0.4s ease-in-out;
+}
+
+.nav__link:hover {
+  color: #2f80ed;
 }
