--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,40 +1,39 @@
 .card {
-    width: 540px;
+  width: 540px;
 }
 
 .card__title {
-    margin: 0 0 32px;
-    font-family: "Inter", Arial, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 30px;
+  margin: 0 0 32px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .card__list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .card__list-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 16px;
-    font-family: "Noto Serif", "Times New Roman", serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 16px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .card__list-item:last-of-type {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .card__list-divider {
-    flex-grow: 1;
-    border-bottom: 1px solid #6F6F6F;
-    margin: 0 10px;
+  flex-grow: 1;
+  border-bottom: 1px solid #6f6f6f;
+  margin: 0 10px;
 }
