--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -21,6 +21,11 @@
 
 .footer__social-heading {
   margin: 0 0 20px 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .footer__list {
@@ -32,6 +37,11 @@
 .footer__list-item {
   display: block;
   margin: 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .footer__list-item:first-of-type {
@@ -47,7 +57,7 @@
 .footer__social-link {
   color: #ffffff;
   text-decoration: none;
-  transition: color 2s linear;
+  transition: color 0.5s linear;
 }
 
 .footer__social-link:hover {
@@ -56,4 +66,9 @@
 
 .footer__copyright {
   margin: 108px 0 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
 }
