--- a/blocks/header.css
+++ b/blocks/header.css
@@ -13,7 +13,7 @@
   box-sizing: border-box;
 }
 
-.span-accent {
+.header__span-accent {
   display: block;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
